--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokenize.it/dss-vest",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-beta.1",
   "description": "adds erc2771 and a factory for DssVestMintable to dss-vest",
   "keywords": [
     "evm",
